--- a/style.css
+++ b/style.css
@@ -1,19 +1,39 @@
+body {
+    font-family: Helvetica, sans-serif
+}
+
+.header {
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+}
+
 .add-book {
     margin: 10px;
-    width: 100px;
+    font-size: 20px;
+    width: 120px;
+    height: 50px;
+    background-color: rgb(161, 161, 252);
 }
 
 .entry-form {
+    border: solid;
     display: flex;
     flex-direction: column;
     gap: 10px;
     margin: 10px;
 }
 
+.title {
+    border: solid;
+    
+}
 .library-display {
     display: flex;
+    flex-direction: column;
     flex: 1;
     gap: 10px;
+    align-items: center;
 }
 
 .card-title {
@@ -44,4 +64,5 @@
 .book-card{
     padding: 10px;
     border: solid;
+    margin: 50px;
 }
