--- a/style.css
+++ b/style.css
@@ -35,13 +35,14 @@ body {
     width: 200px;
     height: 30px;
     background-color: white;
-    border: solid white 2px;
+    border: solid black 2px;
     border-radius: 4px;
     align-content: center;
 }
 
 .add-book:hover {
-    background-color: rgb(255, 2, 2);
+    background-color: rgb(0, 0, 0);
+    color: white;
     cursor: pointer;
 }
 
@@ -84,6 +85,11 @@ body {
     border-radius: 4px;
     margin: 10px;
     background-color: rgb(255, 255, 255);
+}
+
+.remove-button:hover {
+    background-color: black;
+    color: white;
 }
 
 .book-card{
