--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 body {
     font-family: Helvetica, sans-serif;
-    background-color:  rgb(75, 83, 126);
     color: black;
     background-color: white;
     margin: 0;
 }
 
 .header {
-    font-size: 30px;
+    font-size: 48px;
     font-weight: bold;
     display: flex;
-    color: rgb(255, 239, 151);
+    color: rgb(255, 255, 255);
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: black;
@@ -18,14 +17,13 @@ body {
 }
 
 .entry-form {
-    display: flex;
+    display: none;
     flex-direction: column;
-    background-color: rgb(255, 239, 151);;
+    background-color: rgb(210, 253, 255);;
     align-items: center;
     padding-top: 30px;
     padding-bottom: 30px;
     gap: 10px;
-    border-bottom: solid black 2px;
 }
 
 .add-book {
@@ -46,10 +44,6 @@ body {
     cursor: pointer;
 }
 
-.input {
-    width: 200px;
-}
-
 .library-display {
     display: flex;
     flex-direction: row;
@@ -57,34 +51,44 @@ body {
     flex: 1;
     gap: 10px;
     align-items: center;
+    border-top: solid black 2px;
 }
 
 .card-title {
-    padding: 10px;
+    margin: 20px;
+    align-self: flex-start;
 }
 
 .card-author {
-    padding: 10px;
+    padding: 20px;
+    align-self: flex-start;
 }
 
 .card-pages {
-    padding: 10px;
+    padding: 20px;
+    align-self: flex-start;
 }
 
 .card-read-status {
-    padding: 10px;
     height: 30px;
     width: 120px;
     color: black;
     align-self: center;
 }
 
+.card-read-status:hover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
+    cursor: pointer;
+}
+
 .remove-button {
     padding: 10px;
     border: solid black 2px;
+    width: 120px;
     border-radius: 4px;
     margin: 10px;
     background-color: rgb(255, 255, 255);
+    cursor: pointer;
 }
 
 .remove-button:hover {
@@ -96,18 +100,48 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 10px;
     border: solid black 2px;
     border-radius: 4px;
     margin: 10px;
-    width: 200px;;
-    background-color: rgb(255, 239, 151);;
+    width: 200px;
+    height: 300px;
+    background-color: rgb(210, 253, 255);;
 }
 
 .green {
-    background-color: rgb(194, 255, 194);
+    background-color: rgb(211, 255, 211);
+    border-radius: 4px;
+    border: solid black 2px;
 }
 
 .red {
-    background-color: rgb(255, 158, 158);
+    background-color: rgb(255, 179, 179);
+    border-radius: 4px;
+    border: solid black 2px;
+}
+
+.banner {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(210, 253, 255);
+    
+}
+
+.add-form {
+    width: 200px;
+    height: 50px;
+    font-size: 18px;
+    background-color: white;
+    border: solid black 2px;
+    border-radius: 4px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.add-form:hover {
+    background-color: black;
+    color: white;
+    cursor: pointer;
 }
